testsuite/lab2-testsuite/good/subtyping/arith_int_add_double.cc
int main() {
  let double x;
  x = 1 + 1.1;
  return 0;
}
