testsuite/lab2-testsuite/bad/inc_post_incorrect_type.cc
int main () {
  let bool x;
  x++;
  return 0;
}
